# scytale

app/: package-lock.json  package.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml
backend/: .gitignore  Cargo.toml  sqlx-data.json
backend/migrations/: 0001_initial-tables.sql
backend/src/: controllers.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  utils.rs
backend/src/controllers/: admin.rs  auth.rs  spa.rs  token.rs  user.rs  websocket.rs
backend/src/models/: auth.rs  jwt.rs  state.rs  user.rs  websocket.rs
backend/src/service/: user.rs
