[package]
name = "scytale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.12" , features = ["headers", "json", "ws"]}
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
sqlx = { version = "0.6.3" , features = ["sqlite", "runtime-tokio-rustls", "json", "macros", "offline"] }
dotenv = "0.15.0"
jsonwebtoken = {version = "8", default-features = false }
chrono = { version = "0.4.24", features = ["serde"] }
bcrypt = "0.14.0"
rand = "0.8.5"
rust-argon2 = "1.0.0"
futures = "0.3.27"
rust-embed = { version = "6.6.1", features = ["axum"],  optional = true  }
mime_guess = {version = "2.0.4", optional = true }

[dev-dependencies]
axum-test-helper = "0.2.0"

[features]
# default = ["webapp"]
# Defines a feature named `webp` that does not enable any other features.
webapp = ["dep:rust-embed", "dep:mime_guess"]
